SimpleComplex/Locale 1.x, 2017-10-10
------------------------------------
- Allow long keys; 128 instead of 64 chars.
- Release 1.1.

SimpleComplex/Locale 1.x, 2017-09-24
------------------------------------
- Release 1.0.

SimpleComplex/Locale 1.x, 2017-09-22
------------------------------------
- Locale-text no longer risk that dupe key string values become array.
  Removed warnings from documentation.

SimpleComplex/Locale 1.x, 2017-09-03
------------------------------------
- Locale text() 'default' parameter.

SimpleComplex/Locale 1.x, 2017-08-24
------------------------------------
- CLI commands must respect new command 'silent' property.
- CLI 'get' command default to print instead default to return the value.

SimpleComplex/Locale 1.x, 2017-08-23
------------------------------------
- Sort text ini file paths, to allow predictable override of common texts.

SimpleComplex/Locale 1.x, 2017-08-11
------------------------------------
- Allow that text() placeholder key is % prefixed.
- Err if locale class doesn't exist; a.k.a. configuration error,
  probably wrongly delimited namespace in config ini localeToClass[some-locale].

SimpleComplex/Locale 1.x, 2017-07-20
------------------------------------
- Cli script find vendor dir fix.

SimpleComplex/Locale 1.x, 2017-07-18
------------------------------------
- Locale text() must always return string.
  Locale text() use string parameter identifier ('section:key:sub').

SimpleComplex/Locale 1.x, 2017-07-12
------------------------------------
- Release 0.9.

SimpleComplex/Locale 1.x, 2017-07-02
------------------------------------
- Don't parse type locale-text text .inis.
- Include locale-text settings into main locale settings .ini file.
- Better help in .ini files.
- Export from cache.

SimpleComplex/Locale 1.x, 2017-07-01
------------------------------------
- CLI interface for locale text.
- Export locale text from sources, as JSON to file.

SimpleComplex/Locale 1.x, 2017-06-30